[gd_scene load_steps=9 format=3 uid="uid://d2yw5b0fmnmkv"]

[ext_resource type="Texture2D" uid="uid://3svksbdfj53l" path="res://app/images/suffragium_badge_36.png" id="2"]
[ext_resource type="Theme" uid="uid://ctnqtb0r41guf" path="res://app/style/main_theme.tres" id="3"]
[ext_resource type="Script" path="res://app/scenes/menu.gd" id="5"]
[ext_resource type="Theme" uid="uid://c0mv23lcspr7u" path="res://app/scenes/title_font_theme.tres" id="5_nxett"]
[ext_resource type="Texture2D" uid="uid://hbkfur2u0e05" path="res://app/images/cogwheel_16.png" id="6"]
[ext_resource type="Script" path="res://app/scenes/about.gd" id="6_lt6p3"]
[ext_resource type="Script" path="res://app/scenes/settings.gd" id="7"]

[sub_resource type="StyleBoxEmpty" id="19"]

[node name="Menu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3")
theme_override_constants/separation = 0
script = ExtResource("5")

[node name="MenuBar" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HC" type="HBoxContainer" parent="MenuBar"]
layout_mode = 2

[node name="LogoBadge" type="TextureRect" parent="MenuBar/HC"]
layout_mode = 2
texture = ExtResource("2")

[node name="Spacer" type="Control" parent="MenuBar/HC"]
layout_mode = 2

[node name="ButtonGames" type="Button" parent="MenuBar/HC"]
layout_mode = 2
text = "T_GAMES"

[node name="ButtonAbout" type="Button" parent="MenuBar/HC"]
layout_mode = 2
text = "T_ABOUT_SUFFRAGIUM"

[node name="ButtonParticipate" type="Button" parent="MenuBar/HC"]
layout_mode = 2
text = "T_PARTICIPATE"

[node name="ButtonReportBug" type="Button" parent="MenuBar/HC"]
layout_mode = 2
text = "T_REPORT_A_BUG"

[node name="ButtonSettings" type="Button" parent="MenuBar/HC"]
layout_mode = 2
size_flags_horizontal = 10
text = "T_SETTINGS"
icon = ExtResource("6")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("19")
tabs_visible = false

[node name="Games" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MC" type="MarginContainer" parent="TabContainer/Games"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 0

[node name="Toolbar" type="HBoxContainer" parent="TabContainer/Games/MC"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="TabContainer/Games/MC/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("5_nxett")
text = "T_GAMES"

[node name="Label2" type="Label" parent="TabContainer/Games/MC/Toolbar"]
layout_mode = 2
size_flags_vertical = 1
text = "T_SORTING"
vertical_alignment = 1

[node name="OptionButtonSorting" type="OptionButton" parent="TabContainer/Games/MC/Toolbar"]
layout_mode = 2
size_flags_vertical = 4
item_count = 3
selected = 0
popup/item_0/text = "T_ALPHABETICAL"
popup/item_0/id = 0
popup/item_1/text = "T_LAST_PLAYED"
popup/item_1/id = 1
popup/item_2/text = "T_LONGST_PLAYTIME"
popup/item_2/id = 2

[node name="SC" type="ScrollContainer" parent="TabContainer/Games"]
layout_mode = 2
size_flags_vertical = 3

[node name="MC" type="MarginContainer" parent="TabContainer/Games/SC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="CC" type="CenterContainer" parent="TabContainer/Games/SC/MC"]
layout_mode = 2

[node name="GC" type="GridContainer" parent="TabContainer/Games/SC/MC/CC"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 3

[node name="About" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("6_lt6p3")

[node name="MC" type="MarginContainer" parent="TabContainer/About"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VC" type="VBoxContainer" parent="TabContainer/About/MC"]
layout_mode = 2

[node name="Settings" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("7")

[node name="MC" type="MarginContainer" parent="TabContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VC" type="VBoxContainer" parent="TabContainer/Settings/MC"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/MC/VC"]
layout_mode = 2
theme = ExtResource("5_nxett")
text = "T_SETTINGS"

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Settings/MC/VC"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="VC" type="VBoxContainer" parent="TabContainer/Settings/MC/VC"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="ButtonResetDefaults" type="Button" parent="TabContainer/Settings/MC/VC/VC"]
layout_mode = 2
size_flags_horizontal = 8
text = "T_RESET_TO_DEFAULTS"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Settings/MC/VC/VC"]
layout_mode = 2

[node name="Language" type="HBoxContainer" parent="TabContainer/Settings/MC/VC/VC"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/MC/VC/VC/Language"]
layout_mode = 2
size_flags_horizontal = 3
text = "T_LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Settings/MC/VC/VC/Language"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SmoothScroll" type="HBoxContainer" parent="TabContainer/Settings/MC/VC/VC"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/MC/VC/VC/SmoothScroll"]
layout_mode = 2
size_flags_horizontal = 3
text = "T_SMOOTH_SCROLLING"

[node name="CheckBox" type="CheckBox" parent="TabContainer/Settings/MC/VC/VC/SmoothScroll"]
layout_mode = 2
flat = true

[connection signal="pressed" from="MenuBar/HC/ButtonGames" to="." method="_on_ButtonGames_pressed"]
[connection signal="pressed" from="MenuBar/HC/ButtonAbout" to="." method="_on_ButtonAbout_pressed"]
[connection signal="pressed" from="MenuBar/HC/ButtonParticipate" to="." method="_on_ButtonParticipate_pressed"]
[connection signal="pressed" from="MenuBar/HC/ButtonReportBug" to="." method="_on_ButtonReportBug_pressed"]
[connection signal="pressed" from="MenuBar/HC/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="item_selected" from="TabContainer/Games/MC/Toolbar/OptionButtonSorting" to="." method="_on_OptionButtonSorting_item_selected"]
[connection signal="pressed" from="TabContainer/Settings/MC/VC/VC/ButtonResetDefaults" to="TabContainer/Settings" method="_on_ButtonResetDefaults_pressed"]
[connection signal="item_selected" from="TabContainer/Settings/MC/VC/VC/Language/OptionButton" to="TabContainer/Settings" method="_on_LanguageSelection_item_selected"]
[connection signal="toggled" from="TabContainer/Settings/MC/VC/VC/SmoothScroll/CheckBox" to="TabContainer/Settings" method="_on_CheckBoxSmoothScroll_toggled"]
